tests/e2e/tests/pilot/testdata/networking/v1alpha3/wildcard-https-wikipedia-no-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: wikipedia
spec:
  hosts:
  - "*.wikipedia.org"
  endpoints:
  - address: wikipedia.org
  location: MESH_EXTERNAL
  resolution: DNS
  ports:
    - number: 443
      name: https
      protocol: HTTPS
  resolution: NONE
  location: MESH_EXTERNAL
